[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflective-surfaces-mcp"
version = "1.0.0"
description = "Systematic visual vocabulary for reflective surface aesthetics in image generation"
authors = [
    {name = "Dal Marsters", email = "dal@lushy.systems"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
